--- a/paper/DeadlockFreedom.tex
+++ b/paper/DeadlockFreedom.tex
@@ -4,11 +4,11 @@
 As we have seen in \Cref{sec:calculus}, the deadlock freedom result
 (\Cref{thm:df}) rests on some notions and predicates about processes which we
 now formalize in Agda. First of all we need to distinguish \emph{threads} from
-\emph{cuts}. As it turns out, in the formalization it is convenient to provide
-an even more fine-grained classification of threads, distinguishing between
-links, input/output actions on linear/shared channels, and sometimes also
-whether such actions operate on free or bound channels. We define predicates for
-each of these process classes:
+\emph{cuts}. As it turns out, in the formalization it is convenient to provide a
+more fine-grained classification of threads, distinguishing between links,
+input/output actions on linear/shared channels, and sometimes also whether such
+actions operate on free or bound channels. We define predicates for each of
+these process classes:
 
 \begin{code}[hide]%
 \>[0]\AgdaSymbol{\{-\#}\AgdaSpace{}%
@@ -161,7 +161,7 @@ each of these process classes:
 
 These predicates are relatively uninteresting since they are essentially
 isomorphic to the relevant parts of the \AgdaDatatype{Process} datatype. The
-only remarkable aspect is that \AgdaDatatype{Input}, \AgdaDatatype{Output},
+only remarkable aspect is that in \AgdaDatatype{Input}, \AgdaDatatype{Output},
 \AgdaDatatype{Client} and \AgdaDatatype{Server} the channel being acted upon by
 the thread is the \emph{first} in $\Context$, hence it is the \emph{most
 recently introduced} channel, whereas in \AgdaDatatype{Delayed} and
@@ -275,8 +275,8 @@ cut or on a free channel. As an illustration, consider the
 \AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{P}\AgdaSymbol{)}\<%
 \end{code}
-where the \AgdaInductiveConstructor{split-l} constructor indicates that the
-thread operates on the most recent channel. In the latter predicate we have
+where the \AgdaInductiveConstructor{<} constructor indicates that the thread
+operates on the most recent channel. In the latter predicate we have
 
 \begin{code}[hide]%
 %
@@ -521,8 +521,10 @@ thread operates on the most recent channel. In the latter predicate we have
 \AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{P}\AgdaSymbol{)}\<%
 \end{code}
-where the \AgdaInductiveConstructor{split-r} constructor indicates that the
-thread operates on a channel other than the most recent one.
+where the \AgdaInductiveConstructor{>} constructor indicates that the thread
+operates on a channel other than the most recent one. Note that here we have to
+specify the type $C$ in front of $\Context$ or else Agda is unable to resolve
+some metavariables.
 
 \begin{code}[hide]%
 %
@@ -1755,7 +1757,7 @@ We can now define observability, reducibility and aliveness in the expected way:
 \end{code}
 
 In order to prove that every (well-typed) process is alive, it is convenient to
-also define a ``canonical'' form for cuts, which is a form that matches at least
+also define a ``canonical'' form for cuts, that is a form that matches at least
 one of the left-hand-sides of the rules for structural pre-congruence or
 reduction (\Cref{tab:semantics}). This is the notion where the fine-grained
 classification of threads introduced earlier comes into play.
@@ -1921,7 +1923,7 @@ classification of threads introduced earlier comes into play.
 \AgdaBound{Q}\AgdaSymbol{)}\<%
 \end{code}
 
-A \emph{canonical cut} $\Cut\x{P}{Q}$ has one of these forms:
+A \emph{canonical cut} $\Cut[A]\x{P}{Q}$ has one of these forms:
 \begin{itemize}
 \item $P$ is a link (\AgdaInductiveConstructor{cc-link}), or
 \item $P$ operates on a channel other than $x$ and is not a server
@@ -2290,7 +2292,7 @@ A \emph{canonical cut} $\Cut\x{P}{Q}$ has one of these forms:
 \AgdaSymbol{())}\<%
 \end{code}
 
-Every cut $\Cut\x{P}{Q}$ where both $P$ and $Q$ are threads can be rewritten
+Every cut $\Cut[A]\x{P}{Q}$ where both $P$ and $Q$ are threads can be rewritten
 into a canonical cut using structural pre-congruence:
 
 \begin{code}%
@@ -2317,8 +2319,10 @@ into a canonical cut using structural pre-congruence:
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaFunction{Thread}\AgdaSpace{}%
 \AgdaBound{Q}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{∃[}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+%
+\>[16]\AgdaFunction{∃[}\AgdaSpace{}%
 \AgdaBound{R}\AgdaSpace{}%
 \AgdaFunction{]}\AgdaSpace{}%
 \AgdaDatatype{CanonicalCut}\AgdaSpace{}%
@@ -3796,11 +3800,11 @@ Now deadlock freedom for $P$ can be proved by induction on $P$.
 \end{code}
 
 When $P$ is a thread, then it is obviously observable and hence alive. When $P$
-is a cut $\Cut\x{P}{Q}$, \AgdaFunction{deadlock-freedom} is applied recursively
-on $P$ and $Q$. If either of these applications yields a reduction, then the
-whole cut is reducible and therefore alive. If both applications yield a thread,
-then we conclude that the cut is alive first rewriting it into a canonical cut
-(\AgdaFunction{canonical-cut}) and then using
+is a cut $\Cut[A]\x{P}{Q}$, \AgdaFunction{deadlock-freedom} is applied
+recursively on $P$ and $Q$. If either of these applications yields a reduction,
+then the whole cut is reducible and therefore alive. If both applications yield
+a thread, then we conclude that the cut is alive first rewriting it into a
+canonical cut (\AgdaFunction{canonical-cut}) and then using
 \AgdaFunction{canonical-cut-alive}.
 
 \begin{code}[hide]%
